--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Ansible Playground</title>
     <style>
       html,
       body {
@@ -31,10 +32,10 @@
 
       .card-zoomed {
         position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
+        top: 16px;
+        bottom: 16px;
+        left: 16px;
+        right: 16px;
       }
 
       .card__head {
@@ -96,7 +97,7 @@
       <div class="card">
         <div class="card__head">
           <div class="card__head__container">
-            <div class="card__head__title">Controller</div>
+            <div class="card__head__title">controller</div>
             <div class="card__head__toolbox">
               <div class="card__head__maximize"></div>
             </div>
@@ -108,7 +109,7 @@
       <div class="card">
         <div class="card__head">
           <div class="card__head__container">
-            <div class="card__head__title">Ubuntu 01</div>
+            <div class="card__head__title">ubuntu01</div>
             <div class="card__head__toolbox">
               <div class="card__head__maximize"></div>
             </div>
@@ -120,7 +121,7 @@
       <div class="card">
         <div class="card__head">
           <div class="card__head__container">
-            <div class="card__head__title">Ubuntu 02</div>
+            <div class="card__head__title">ubuntu02</div>
             <div class="card__head__toolbox">
               <div class="card__head__maximize"></div>
             </div>
@@ -133,7 +134,7 @@
       <div class="card">
         <div class="card__head">
           <div class="card__head__container">
-            <div class="card__head__title">Ubuntu 03</div>
+            <div class="card__head__title">centos01</div>
             <div class="card__head__toolbox">
               <div class="card__head__maximize"></div>
             </div>
