--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
         border: 0;
         margin: 0;
         font-family: sans-serif;
-        padding: 8px;
+        padding: 0;
         background: #1e1e1e;
       }
 
@@ -15,6 +15,7 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+        padding: 8px;
       }
 
       .card {
@@ -32,10 +33,10 @@
 
       .card-zoomed {
         position: fixed;
-        top: 16px;
-        bottom: 16px;
-        left: 16px;
-        right: 16px;
+        top: 8px;
+        bottom: 8px;
+        left: 8px;
+        right: 8px;
       }
 
       .card__head {
