--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,8 @@
         flex-wrap: wrap;
         flex-direction: row;
         padding: 8px;
+        height: 100%;
+        box-sizing: border-box;
       }
 
       .card {
@@ -40,8 +42,7 @@
       }
 
       .card__head {
-        padding: 8px 16px;
-        padding-top: 16px;
+        padding: 10px 16px;
         font-weight: 500;
         font-size: 1rem;
         line-height: 1.2rem;
@@ -54,6 +55,7 @@
       .card__head__container {
         display: flex;
         flex: 1;
+        align-items: center;
       }
 
       .card__head__title {
