Added terminal colors

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,14 @@
         flex-direction: column;
       }
 
+      .card.centos {
+        color: #204c8d;
+      }
+
+      .card.ubuntu {
+        color: #e95420;
+      }
+
       .card-zoomed {
         position: fixed;
         top: 8px;
@@ -109,7 +117,7 @@
           <iframe src="http://localhost:8090"></iframe>
         </div>
       </div>
-      <div class="card">
+      <div class="card ubuntu">
         <div class="card__head">
           <div class="card__head__container">
             <div class="card__head__title">ubuntu01</div>
@@ -121,7 +129,7 @@
           <iframe src="http://localhost:8091"></iframe>
         </div>
       </div>
-      <div class="card">
+      <div class="card ubuntu">
         <div class="card__head">
           <div class="card__head__container">
             <div class="card__head__title">ubuntu02</div>
@@ -134,7 +142,7 @@
           <iframe src="http://localhost:8092"></iframe>
         </div>
       </div>
-      <div class="card">
+      <div class="card centos">
         <div class="card__head">
           <div class="card__head__container">
             <div class="card__head__title">centos01</div>
