Added terminal colors

--- a/web/index.html
+++ b/web/index.html
@@ -34,11 +34,11 @@
       }
 
       .card.centos {
-        color: #204c8d;
+        background: #204c8d;
       }
 
       .card.ubuntu {
-        color: #e95420;
+        background: #e95420;
       }
 
       .card-zoomed {
