--- a/web/html/index.html
+++ b/web/html/index.html
@@ -33,12 +33,28 @@
         flex-direction: column;
       }
 
+      .card.controller {
+        background: #606060;
+        background-image: url(images/controller.svg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 20%;
+      }
+      
       .card.centos {
         background: #204c8d;
+        background-image: url(images/centos.svg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 20%;
       }
 
       .card.ubuntu {
-        background: #e95420;
+        background-color: #e95420;
+        background-image: url(images/ubuntu.svg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 20%;
       }
 
       .card-zoomed {
@@ -47,6 +63,7 @@
         bottom: 8px;
         left: 8px;
         right: 8px;
+        z-index: 100;
       }
 
       .card__head {
@@ -100,12 +117,13 @@
         display: block;
         width: 100%;
         height: 100%;
+        opacity: 95%;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="card">
+      <div class="card controller">
         <div class="card__head">
           <div class="card__head__container">
             <div class="card__head__title">controller</div>
