--- a/web/html/index.html
+++ b/web/html/index.html
@@ -21,7 +21,7 @@
       <div class="card ubuntu">
         <div class="card__head">
           <div class="card__head__container">
-            <div class="card__head__title">ubuntu01</div>
+            <div class="card__head__title">ubuntu</div>
             <div class="card__head__toolbox">
               <div class="card__head__maximize"></div>
             </div>
@@ -31,10 +31,10 @@
           <iframe src="http://localhost:8091"></iframe>
         </div>
       </div>
-      <div class="card ubuntu">
+      <div class="card alpine">
         <div class="card__head">
           <div class="card__head__container">
-            <div class="card__head__title">ubuntu02</div>
+            <div class="card__head__title">alpine</div>
             <div class="card__head__toolbox">
               <div class="card__head__maximize"></div>
             </div>
@@ -47,7 +47,7 @@
       <div class="card centos">
         <div class="card__head">
           <div class="card__head__container">
-            <div class="card__head__title">centos01</div>
+            <div class="card__head__title">centos</div>
             <div class="card__head__toolbox">
               <div class="card__head__maximize"></div>
             </div>
